iaacweb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iaacweb
  namespace: default
  labels:
    io.kompose.service: iaacweb
spec:
  replicas: 2
  strategy:
    type: Recreate
  selector:
    matchLabels:
      io.kompose.service: iaacweb
  template:
    metadata:
      labels:
        io.kompose.service: iaacweb
        io.kompose.network/dw-network: "true"
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: iaacweb
          image: bljnnm/iaacweb:20250428.2
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: "2"
              memory: 2Gi
            requests:
              cpu: 500m
              memory: 512Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
