iaac-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iaac-service
  namespace: default
  labels:
    io.kompose.service: iaac-service
spec:
  replicas: 3
  revisionHistoryLimit: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  selector:
    matchLabels:
      io.kompose.service: iaac-service
  template:
    metadata:
      labels:
        io.kompose.service: iaac-service
        io.kompose.network/dw-network: "true"
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: iaac-service
          image: bljnnm/iaac-service:20250428.1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 500m
              memory: 512Mi
            limits:
              cpu: "2"
              memory: 2Gi
---
apiVersion: v1
kind: Service
metadata:
  name: iaac-service
  namespace: default
  labels:
    io.kompose.service: iaac-service
spec:
  type: ClusterIP
  selector:
    io.kompose.service: iaac-service
  ports:
    - name: http
      port: 8080
      targetPort: 8080
