svc-iaacweb.yaml
apiVersion: v1
kind: Service
metadata:
  name: iaacweb
  namespace: default
  labels:
    io.kompose.service: iaacweb
spec:
  type: ClusterIP
  selector:
    io.kompose.service: iaacweb
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
