ingress-iaac.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  # Хэрэв host хэрэгтэй бол энд host нэмээрэй:
  # rules:
  # - host: your.domain.com
  #   http:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: iaacweb
            port:
              number: 80
      - path: /api/
        pathType: Prefix
        backend:
          service:
            name: apigateway
            port:
              number: 8080
      - path: /swagger/
        pathType: Prefix
        backend:
          service:
            name: apigateway
            port:
              number: 8080
      - path: /dw-auth-service-1/
        pathType: Prefix
        backend:
          service:
            name: apigateway
            port:
              number: 8080
